web: fix css header on iOS

--- a/web/theme/mini.css
+++ b/web/theme/mini.css
@@ -2,3 +2,4 @@
 
 dt{color:green}
 dd{margin-bottom:1rem}
+header{whitespace:normal}
